deployment/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  labels:
    app: poc-blue-green
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poc-blue-green
      version: green
  template:
    metadata:
      labels:
        app: poc-blue-green
        version: green
    spec:
      containers:
      - name: green
        image: ghcr.io/oddsteam/poc-blue-green-istio:green-latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
