deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poc-blue-green
spec:
  selector:
    app: poc-blue-green
    version: blue
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
