deployment/gateway.yaml
# apiVersion: networking.istio.io/v1  
# kind: Gateway
# metadata:
#   name: poc-blue-green-gateway
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*" 

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: poc-blue-green-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
