deployment/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: poc-blue-green
spec:
  host: poc-blue-green
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
